# PREFS

./: .appveyor.yml  .gitignore  404.html  CHANGELOG.md  CHANGELOG.txt  CODE_OF_CONDUCT.md  EXTRAINFO.md  LICENSE  LICENSE.txt  MANIFEST.in  PREFS.sublime-syntax  PrefsSyntax.sublime-syntax  README.md  README.txt  TOCHECK.md  index.html  main.py  pyproject.toml  python-package.yml  requirements.txt  setup.py  sitemap.xml  test.prefs
.github/workflows/: codeql-analysis.yml  python-package.yml  tests-windows.yaml  tests.yml
Demo/: demo.py
Docs/: README.md
PREFS/: __init__.py  __main__.py  createPREFS.py  demo.py  docs.py  example.py  extra.py  idea.prefs  readPREFS.py  test.py  trial.prefs  trial.py
PREFS/Example/: example.py  prefs.prefs  trial.py
PREFS/Test/: prefs1.prefs  prefs2.prefs  test.py  test_.py  test_0.py  test_1.py  test_2.py  test_All.py  test_cli.py  test_read_create.py  theme_resource.py
PREFS/TestLibrary/: prefs2.prefs  test_.py  test_1.py  test_read_create.py
PREFS/Trial/: trial.py
PREFS/build_test/: build_test.py  build_test.spec
PREFS/test/: TestAll.py  prefs1.prefs  test_.py  test_1.py  test_read_create.py  theme.prefs
about/: index.html
about/CHANGELOG/: index.html
about/LICENSE/: index.html
assets/css/: styles.cbb3a72c.css
assets/js/: 03d63cd7.266a106b.js  05113313.913a749f.js  07f2fad9.089b4444.js  1707d5d2.4c15389c.js  1707d5d2.9029135f.js  1707d5d2.d8a29aa5.js  17896441.4a1e8d9d.js  17896441.9727d84a.js  1be78505.49947590.js  1be78505.6c487da0.js  1e3af785.529518d3.js  1e3af785.8cbf155d.js  1f391b9e.acc4ba1a.js  1f391b9e.bbcdf17c.js  24142c73.38f8cb47.js  24142c73.4cade0f1.js  24142c73.a2549a5c.js  26a8c297.2d90d5a8.js  26a8c297.9e48f64f.js  (+112 more)
docs/: CHANGELOG.md  EXTRAINFO.md  README.md  index.html
search/: index.html
src/: exceptions.py  prefs.py  utils.py
tests/: TESTS.md  prefs.prefs  prefs_resource.py  test_func.json  test_func.yaml  test_func_resource.py  test_prefs.py
website/: README.md  docusaurus.config.js  files.py  package-lock.json  package.json  sidebars.js  versions.json
(+210 files in other folders)
