[tool.poetry]
name = "prefs"
version = "0.3.0"
description = ""
authors = ["Patitotective <cristobalriaga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
